--- a/PlottingScripts/MakeFigures.Rmd
+++ b/PlottingScripts/MakeFigures.Rmd
@@ -114,7 +114,7 @@ SFS <- ggplot(join, aes(x = NAG_MAF, y = JPT_MAF)) +
                                           '10,000', '100,000', '1,000,000')) +
           scale_x_continuous(expand = c(0.01,0.01)) +
           scale_y_continuous(expand = c(0.01,0.01)) + 
-          xlab(label = "Nagahama") +
+          xlab(label = "Nagahama Frequency") +
           theme_classic() +
           theme(axis.line = element_blank(), 
                 axis.title.y = element_blank(), 
@@ -128,7 +128,7 @@ HIST <- ggplot(jj, aes(x = JPT_MAF)) +
                              expand = c(0.01, 0.01)) +
             scale_y_reverse(expand = c(0.01, 0.01), 
                           breaks = c(10, 50, 100)) +
-            labs(x = "1000 Genomes Project",
+            labs(x = "1000 Genomes Project Frequency",
                  y = "") +
             coord_flip() +
             theme_classic() +
